# qdrant-pdf-uploader

./: Cargo.toml  README.md
src/: main.rs
