[package]
name = "rust-vectordb-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.7.5"
qdrant-client = "1.8.0"
anyhow = "1.0.82"
serde_json = "1.0.116"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "rt", "macros"] }
text-splitter = { version = "0.10.0", features = ["markdown", 'tiktoken-rs'] }
tiktoken-rs = "0.5.8"
fastembed = "3.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
